# internal/controller/http/supervisor.go
@@ -6,33 +6,32 @@ import (
 	"net/http"
 	"ssr/internal/controller/http/middlewares"
 	"ssr/internal/dto"
-	"ssr/internal/usecase"
 	"ssr/pkg/logger"
 	"ssr/pkg/misc"
 	"strconv"
 )
 
-type supervisorRoutes struct {
-	l         logger.Interface
-	profileUC usecase.IUsecaseProfile
-	bidUC     usecase.IUseCaseSupervisorBid
-	workUC    usecase.ISupervisorWorkUC
+type supervisor struct {
+	l              logger.Interface
+	profileService SvProfileService
+	bidService     SvBidService
+	workService    SvWorkService
 }
 
 // ShowAccount godoc
-// @Summary      GetUserInfo supervisor's profile
+// @Summary      GetUserByEmail supervisor's profile
 // @Tags         supervisor
 // @Produce      json
-// @Success      200  {object}  dto.SupervisorProfile
+// @Success      200  {object}  dto.SvProfile
 // @Router       /api/supervisor/profile [get]
 // @Security	 Auth
-func (r *supervisorRoutes) getProfile(ctx echo.Context) error {
+func (ctrl *supervisor) getProfile(ctx echo.Context) error {
 	email, _ := misc.ExtractCtx(ctx)
-	r.l.Debug(fmt.Sprintf("Email: %s", email))
+	ctrl.l.Debug(fmt.Sprintf("Email: %s", email))
 
-	respDTO, err := r.profileUC.GetSupervisorProfile(email)
+	respDTO, err := ctrl.profileService.GetSupervisorProfile(email)
 	if err != nil {
-		r.l.Error(err)
+		ctrl.l.Error(err)
 		return echo.NewHTTPError(http.StatusInternalServerError, "TODO")
 	}
 
@@ -40,22 +39,22 @@ func (r *supervisorRoutes) getProfile(ctx echo.Context) error {
 }
 
 // ShowAccount godoc
-// @Summary      GetUserInfo supervisor's works
+// @Summary      GetUserByEmail supervisor's works
 // @Tags         supervisor
 // @Param        supervisor_id query int  true  "Supervisor ID"
 // @Produce      json
-// @Success      200  {object}  dto.SupervisorWorkPlenty
+// @Success      200  {object}  dto.SvWorkPlenty
 // @Router       /api/supervisor/work [get]
 // @Security	 Auth
-func (r *supervisorRoutes) getWorks(ctx echo.Context) error {
+func (ctrl *supervisor) getWorks(ctx echo.Context) error {
 	email, _ := misc.ExtractCtx(ctx)
-	r.l.Debug(fmt.Sprintf("Email: %s", email))
+	ctrl.l.Debug(fmt.Sprintf("Email: %s", email))
 
 	supervisorID, _ := strconv.Atoi(ctx.QueryParam("supervisor_id"))
 
-	respDTO, err := r.workUC.GetSupervisorWorks(supervisorID)
+	respDTO, err := ctrl.workService.GetSupervisorWorks(supervisorID)
 	if err != nil {
-		r.l.Error(err)
+		ctrl.l.Error(err)
 		return echo.NewHTTPError(http.StatusInternalServerError, "TODO")
 	}
 
@@ -63,22 +62,22 @@ func (r *supervisorRoutes) getWorks(ctx echo.Context) error {
 }
 
 // ShowAccount godoc
-// @Summary      GetUserInfo supervisor's bids
+// @Summary      GetUserByEmail supervisor's bids
 // @Tags         supervisor
 // @Param        supervisor_id query int  true  "Supervisor ID"
 // @Produce      json
-// @Success      200  {object}  dto.SupervisorBids
+// @Success      200  {object}  dto.SvBids
 // @Router       /api/supervisor/bid [get]
 // @Security	 Auth
-func (r *supervisorRoutes) getBids(ctx echo.Context) error {
+func (ctrl *supervisor) getBids(ctx echo.Context) error {
 	email, _ := misc.ExtractCtx(ctx)
-	r.l.Debug(fmt.Sprintf("Email: %s", email))
+	ctrl.l.Debug(fmt.Sprintf("Email: %s", email))
 
 	supervisorID, _ := strconv.Atoi(ctx.QueryParam("supervisor_id"))
 
-	respDTO, err := r.bidUC.GetSupervisorBids(supervisorID)
+	respDTO, err := ctrl.bidService.GetSupervisorBids(supervisorID)
 	if err != nil {
-		r.l.Error(err)
+		ctrl.l.Error(err)
 		return echo.NewHTTPError(http.StatusInternalServerError, "TODO")
 	}
 
@@ -93,16 +92,16 @@ func (r *supervisorRoutes) getBids(ctx echo.Context) error {
 // @Success      200  {object}  dto.ResolveBidResp
 // @Router       /api/supervisor/bid/resolve [post]
 // @Security	 Auth
-func (r *supervisorRoutes) resolveBid(ctx echo.Context) error {
+func (ctrl *supervisor) resolveBid(ctx echo.Context) error {
 	email, _ := misc.ExtractCtx(ctx)
-	r.l.Debug(fmt.Sprintf("Email: %s", email))
+	ctrl.l.Debug(fmt.Sprintf("Email: %s", email))
 
 	reqDTO := &dto.ResolveBid{}
 	if err := ctx.Bind(reqDTO); err != nil {
 		return echo.ErrBadRequest
 	}
 
-	if err := r.bidUC.Resolve(reqDTO); err != nil {
+	if err := ctrl.bidService.Resolve(reqDTO); err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError)
 	}
 
@@ -121,20 +120,20 @@ func (r *supervisorRoutes) resolveBid(ctx echo.Context) error {
 func NewSupervisorRoutes(
 	router *echo.Group,
 	l logger.Interface,
-	profileUC usecase.IUsecaseProfile,
-	bidUC usecase.IUseCaseSupervisorBid,
-	workUC usecase.ISupervisorWorkUC,
+	profileService SvProfileService,
+	bidService SvBidService,
+	workService SvWorkService,
 ) {
-	r := &supervisorRoutes{l, profileUC, bidUC, workUC}
+	ctrl := &supervisor{l, profileService, bidService, workService}
 
 	g := router.Group("/supervisor", middlewares.CheckRole)
 
 	{
-		g.GET("/profile", r.getProfile)
-		g.GET("/bid", r.getBids)
-		g.POST("/bid/resolve", r.resolveBid)
-		g.GET("/work", r.getWorks)
-		g.GET("/work", r.getWorks)
+		g.GET("/profile", ctrl.getProfile)
+		g.GET("/bid", ctrl.getBids)
+		g.POST("/bid/resolve", ctrl.resolveBid)
+		g.GET("/work", ctrl.getWorks)
+		g.GET("/work", ctrl.getWorks)
 	}
 
 }
